fixed double scrollbar in scroll view

--- a/src/styles/sass/main.scss
+++ b/src/styles/sass/main.scss
@@ -423,6 +423,9 @@ iframe {
   @media screen and (max-width: 40rem) {
     width: 3rem;
   }
+  &.hidden {
+    display: none;
+  }
 }
 
 .flip-page-btn {
